2007-07-25  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: dump a version to 0.4.0.

2007-07-18  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: Sync to Fedora's.

	* data/Makefile.am: Install xinput.sh script.

	* src/xinput.c (xinput_data_new): Update to not bringing IM up actually.

	* src/im-chooser.c (_im_chooser_detect_current_mode): Update
	an installation path for the system xinputrc.
	(im_chooser_get_widget): Evaluate the variables from xinput.sh script
	to see the real result.
	(im_chooser_get_widget): Use better words.

	* configure.ac: Add options, --with-xinputrcdir and --with-xinputsh.

	* data/xinput.sh.in: Support the auxiliary program.

	* data/xinput.sh.in: Update to not bringing IM up actually.

	* configure.ac: Generate xinput.sh.

2007-01-30  Akira TAGOH  <tagoh@redhat.com>

	Translation updates release.

	* configure.ac: bumped to 0.3.4.

2006-10-07  Akira TAGOH  <at@gclab.org>

	* configure.ac: remove AM_GLIB_DEFINE_LOCALEDIR.

	* src/Makefile.am (INCLUDES): added IMCHOOSE_LOCALEDIR.

	* data/xinput.sh: fallback to read /etc/default/locale if there are no
	/etc/profile.d/lang.sh.

2006-10-02  Akira TAGOH  <at@gclab.org>

	Translation updates release.

	* configure.ac: bumped to 0.3.3.

2006-09-08  Akira TAGOH  <at@gclab.org>

	* configure.ac: bumped to 0.3.2.

	* data/im-chooser.png: added an icon from Andrew Fitzsimon

	* src/main.c (main): show the window icon.

	* src/im-chooser.desktop.in.in (Icon): added icon.

2006-08-29  Akira TAGOH  <at@gclab.org>

	* src/im-chooser.c (_im_chooser_set_menu_from_im_table): check
	the suffix thing too.

2006-08-25  Akira TAGOH  <at@gclab.org>

	* src/im-chooser.desktop.in.in: removed MimeType.

2006-08-15  Akira TAGOH  <at@gclab.org>

	* configure.ac: bumped to 0.3.1.

	* src/main.c (_real_style_set): override spacings.

2006-08-07  Akira TAGOH  <at@gclab.org>

	* src/main.c (main): add an icon to the log out button.
	make a window to not resizable.
	adjusted the border inside the window.
